--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,39 @@
 .App {
   text-align: center;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.container {
+  padding-top: 5%;
+  background-color: lightgrey;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+#search-input-box {
+  width: 250px;
 }
-
-.App-link {
-  color: #61dafb;
+.list-container {
+  padding-top: 10%;
 }
+.list-container .wrapper {
+  margin: 40px 10%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 4rem 2rem;
+}
+.card-container {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  min-height: 200px;
+}
+.card-container .title-box {
+  grid-row: 1;
+  grid-column: 2/2;
+}
+.card-container .img-box {
+  grid-row: 1;
+  grid-column: 1/2;
+  margin: 0 auto;
+  box-shadow: 0px 8px 8px #000;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  position: absolute;
+  top: auto;
+  margin-top: -16px;
+  margin-left: 16px;
 }
