--- a/src/App.css
+++ b/src/App.css
@@ -105,3 +105,46 @@ a {
 .card-container .title-box .small-desc.button-div button {
   align-self: flex-end;
 }
+@media(max-width: 1050px) {
+  .list-container .wrapper {
+    margin: 40px 1%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 5rem 4rem;
+    gap: 4rem 2rem;
+  }
+}
+@media(max-width: 767px) {
+  .list-container .wrapper {
+    display: flex;
+    flex-direction: column;
+    margin: 40px 5%;
+
+  }
+  .card-container {
+    grid-template-columns: 1fr 3fr;
+  }
+
+}
+@media(max-width: 550px) {
+  .card-container {
+    grid-template-columns: 1fr 2fr;
+  }
+}
+@media(max-width: 420px) {
+  .card-container {
+    display: flex;
+    flex-direction: column-reverse;
+  }
+  .card-container .img-box {
+    box-shadow: 0px 8px 8px #000;
+    position: relative;
+    margin-left: 16px;
+    max-width: 100%;
+    display: block;
+    margin-top: 0;
+  }
+  .card-container .title-box {
+    padding: 1rem;
+}
+}
